# tool-credit-risk-modelling

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  data_setup.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml  codeql-analysis.yml  deploy-api-cloudrun.yml  deploy-notebooks-hf.yml  deploy-web-cloudrun.yml  sync_to_hf_hub.yml
apps/api/: __init__.py  auth.py  config.py  dependencies.py  logging_config.py  main.py
apps/api/middleware/: __init__.py  rate_limit.py
apps/api/routers/: __init__.py  auth.py  feature_selection.py  models.py  predict.py  train.py
apps/api/services/: __init__.py  audit.py  feature_selection_service.py  inference.py  model_store.py  persistent_model_store.py  training.py
apps/gradio/: README.md  api_client.py  app.py  config.py  requirements.txt
apps/gradio/components/: comparison_tab.py  prediction_tab.py  (+1 more)
apps/marimo/: Dockerfile  README.md  requirements.txt  server.py
apps/web/: Dockerfile  README.md  biome.json  middleware.ts  next.config.ts  package-lock.json  package.json
common/: data.py  util.py  views.py
data/processed/: cr_loan_w2.csv
docs/: DEPLOYMENT.md  ENV_VARS.md  Model-Comparisons.md  PESTLE.md
docs/0-RFCs/: RFC-001-CreditRiskPlatformArchitecture.md  RFC-002-api-layer.md  RFC-003-marimo-notebooks.md  RFC-004-gradio-app.md  RFC-005-nextjs-ui.md  RFC-006-auth-polish.md  RFC-README.md
docs/1-ADRs/: ADR-001-shared-layer-foundation.md  ADR-002-pydantic-as-contract.md  ADR-003-marimo-over-jupyter.md  ADR-004-api-key-authentication.md  ADR-005-model-persistence-strategy.md  ADR-006-ui-progression.md  ADR-007-chart-library.md  ADR-008-monorepo-structure.md  ADR-009-cloud-run-deployment.md  ADR-010-feature-selection.md  ADR-011-automatic-feature-selection.md  ADR-011-nextjs-cloud-run.md  ADR-012-automatic-feature-selection.md  ADR-013-remove-web-authentication.md  ADR-014-remove-gradio-authentication.md  ADR-README.md  README.md
docs/RFCs/: RFC-001-CreditRiskPlatformArchitecture.md  RFC-002-api-layer.md
docs/call-graph/: call-graph-logistic_train_model.gv  call-graph-util_predict_model.gv  call-graph-util_predict_model_threshold.gv  call-graph-util_test.gv  call-graph-xgboost_train_model.gv  util_model_comparison.gv
notebooks/: 00_landing.py  01_eda.py  02_model_comparison.py  03_threshold_optimization.py  04_calibration.py  README.md
shared/: __init__.py  constants.py
shared/logic/: __init__.py  evaluation.py  feature_selection.py  preprocessing.py  threshold.py
shared/schemas/: __init__.py  audit.py  feature_selection.py  loan.py  metrics.py  model.py  prediction.py  training.py
src/: app.py
src/features/: build_features.py  util_build_features.py
src/models/: logistic_model.py  logistic_predict_model.py  logistic_test_model.py  logistic_train_model.py  util_model_class.py  util_model_comparison.py  util_predict_model.py  util_predict_model_threshold.py  util_strategy_table.py  util_test.py  xgboost_model.py  xgboost_predict_model.py  xgboost_test_model.py  xgboost_train_model.py
src/visualization/: graphs_decision_tree.py  graphs_download.py  graphs_logistic.py  graphs_settings.py  graphs_test.py  graphs_threshold.py  metrics.py
tests/api/: conftest.py  test_feature_selection_endpoint.py  test_health.py  test_models.py  test_predict.py  test_train.py
tests/shared/: conftest.py  test_evaluation.py  test_feature_selection.py  test_preprocessing.py  test_schemas.py  test_threshold.py
views/: decision_tree.py  evaluation.py  logistic.py  model_comparison.py  strategy_table.py  threshold.py  typing.py
(+26 files in other folders)
