[project]
name = "credit-risk-modelling"
version = "0.1.0"
description = "Credit risk model builder — production-grade monorepo"
authors = [{ name = "pkiage", email = "paul.r.kiage@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "plotly>=5.22",
    "pydantic>=2.7",
    "marimo>=0.13",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic-settings>=2.4",
    "slowapi>=0.1.9",
    "structlog>=25.0",
    "joblib>=1.4",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Marimo cell functions receive classes/uppercase vars as arguments
"notebooks/*.py" = ["N803", "N806"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "apps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
