[project]
name = "credit-risk-modelling"
version = "0.1.0"
description = "Credit risk model builder — production-grade monorepo"
authors = [{ name = "pkiage", email = "paul.r.kiage@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "plotly>=5.22",
    "pydantic>=2.7",
    "marimo>=0.13",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic-settings>=2.4",
    "slowapi>=0.1.9",
    "structlog>=25.0",
    "joblib>=1.4",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# ML convention: X, X_train, X_test are standard feature matrix names
"notebooks/*.py" = ["N803", "N806"]
"apps/api/services/*.py" = ["N806"]
"shared/logic/preprocessing.py" = ["N803"]
"tests/**/*.py" = ["N806"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "apps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry]
# apps/ and shared/ are local packages, not external dependencies
ignore_modules = ["apps", "shared"]

[tool.deptry.per_rule_ignores]
# CLI tools are invoked, not imported
DEP002 = ["uvicorn", "pytest", "pytest-cov", "ruff", "bandit", "deptry", "pip-audit"]
# Gradio app has its own requirements.txt (deploys separately to HF Spaces)
DEP001 = ["gradio"]
# httpx is a dev dep for test client; Gradio installs it via its own requirements.txt
DEP004 = ["httpx"]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "deptry>=0.24.0",
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
]
